# acrostica

./: .appveyor.yml  .travis.yml  CMakeLists.txt  LICENSE  travis.sh
.github/workflows/: ci.yml  codeql-analysis.yml
include/acrostica/: ClueView.h  MessageWidget.h  MissingLettersModel.h  MissingLettersUI.h  PrintWindow.h  acrostic.h  mainwindow.h  pragma.h
include/acrostica/ui/: DownMsg.h
src/: CMakeLists.txt  ClueHighlighter.cpp  ClueHighlighter.h  ClueView.cpp  ClueWidget.cpp  ClueWidget.h  MessageBox.cpp  MessageBox.h  MessageWidget.cpp  MissingLettersModel.cpp  MissingLettersModel.h  MissingLettersUI.cpp  MissingLettersUI.h  PrintWindow.cpp  acrostic.cpp  acrostic.h  acrostica.cpp  acrostica.h  acrostica.ui  clue.cpp  clue.h  lettergrid.cpp  lettergrid.h  main.cpp  mainwindow.cpp  mainwindow.h
src/ui/: DownMsg.cpp  DownMsg.h
src/widgets/: DownMsg.cpp  DownMsg.h
